# network-chess

./: .flake8  .gitignore  README.md  pyproject.toml
version_1/: chess1.py
version_2/: ChessEngine.py  ChessEngine_2.py  ChessMain.py
version_3/: board.py  color.py  config.py  const.py  dragger.py  game.py  main.py  move.py  piece.py  settings.py  sound.py  square.py  theme.py
