[tool.poetry]
name = "network-chess"
version = "0.1.0"
description = ""
authors = ["MiloslavskiySergey <sergey07061999@gmail.com>"]
readme = "README.md"
packages = [{include = "network_chess"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.3.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^1.5.3"
flake8-quotes = "^3.3.1"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-simplify = "^0.19.3"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.13.2"
flake8-use-fstring = "^1.4"
flake8-annotations = "^2.9.1"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
